closest - shadowDom issue
https://github.com/bpmn-io/min-dom/issues/5
위와 관련된 이슈로 인해서, bpmn-js와 min-dom 리파지토리를 fork 해서 사용함.

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   "dependencies": {
     "@things-factory/layout-base": "*",
     "@things-factory/shell": "*",
-    "bpmn-js": "^6.3.0",
+    "bpmn-js": "things-factory/bpmn-js",
     "file-saver": "^2.0.2",
     "svg-to-dataurl": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@things-factory/operato-bpms": "*"
+  }
 }
