--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@things-factory/layout-base": "*",
     "@things-factory/shell": "*",
     "bpmn-js": "things-factory/bpmn-js",
+    "bpmn-js-properties-panel": "things-factory/bpmn-js-properties-panel",
+    "camunda-bpmn-moddle": "^4.4.0",
     "file-saver": "^2.0.2",
     "svg-to-dataurl": "^1.0.0"
   },
