--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "dependencies": {
     "@things-factory/layout-base": "*",
     "@things-factory/shell": "*",
-    "bpmn-js": "^6.3.0",
-    "bpmn-js-properties-panel": "^0.33.1",
+    "bpmn-js": "things-factory/bpmn-js",
+    "bpmn-js-properties-panel": "things-factory/bpmn-js-properties-panel",
     "camunda-bpmn-moddle": "^4.4.0",
     "file-saver": "^2.0.2",
     "svg-to-dataurl": "^1.0.0"
